styles/styles.css
svg {
  margin-left: auto;
  margin-right: auto;
  display: block;
}

@media only screen and (max-width : 767px) {
  .same-height {
    height: auto !important;
  } 
}

#mainMenu.affix {
    position: fixed;
    top: 0;
    width: 100%;
    z-index:10;
}

#sidebar.affix {
    position: fixed;
    top: 80px;
}
body {
/*    margin-top: 60px;*/
/*    position: relative;*/
}
ul.nav-pills {
      top: 80px;
      position: fixed;
}
  /*div.col-sm-9 div {
    height: 250px;
    font-size: 28px;
  }*/
  
  
  @media screen and (max-width: 810px) {
    #section1, #section2, #section3, #section4, #section5, #section6  {
        margin-left: 150px;
    }
  }

